--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sqflite: ^2.2.8+4
   path: ^1.8.2
   path_provider: ^2.1.0
+  provider: ^6.0.5
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
